objects/ASI_CRM_Pros_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_DAMD_Action__c</fullName>
        <formula>ASI_CRM_SG_DAMD_Threshold__r.ASI_CRM_SG_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAMD Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Sales__c</fullName>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Group_Outlet_Type__r.ASI_CRM_SG_Group_Outlet_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT( ASI_CRM_SG_Image_Level_Threshold__r.ASI_CRM_SG_Image_Level__r.ASI_CRM_SG_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Level__c</fullName>
        <formula>ASI_CRM_SG_Image_Level_Threshold__r.ASI_CRM_SG_Image_Level_Name__c</formula>
        <label>Image Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_Guidelines_Thresholds__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Guidelines Thresholds</label>
        <referenceTo>ASI_CRM_Investment_Guidelines_Thresholds__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market_Share_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_DAMD_Threshold__r.ASI_CRM_SG_Market_Share__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market_Share__c</fullName>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Prioritization</label>
        <referenceTo>ASI_CRM_PROS_OutletPrioritization__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type_Name__c</fullName>
        <formula>ASI_CRM_SG_Outlet_Type__r.ASI_CRM_SG_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>ASI_CRM_Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_DAMD_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAMD Threshold</label>
        <referenceTo>ASI_CRM_DAMD_Threshold__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level_Id__c</fullName>
        <formula>CASESAFEID(ASI_CRM_SG_Image_Level_Threshold__r.ASI_CRM_SG_Image_Level_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Threshold</label>
        <referenceTo>ASI_CRM_Image_Level_Threshold__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>ASI_CRM_Image_Level__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Is_Image_Level_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that image level criteria sheet was modified</description>
        <label>Is Image Level Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Is_Volume_Potential_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that volume potential criteria sheet was modified</description>
        <label>Is Volume Potential Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_CRM_Outlet_Type__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Service_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate Service Pack to Pros Segmentation</description>
        <label>Service Pack</label>
        <referenceTo>ASI_CRM_ServicePack__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Image_Level_Weight__c</fullName>
        <description>Total Weight of Image Level</description>
        <label>Total Image Level Weight</label>
        <summarizedField>ASI_CRM_Pros_Image_Level__c.ASI_CRM_SG_Weight__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Pros_Image_Level__c.ASI_CRM_SG_Pros_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Volume_Weight__c</fullName>
        <description>Total Volume Potential Weight</description>
        <label>Total Volume Potential Weight</label>
        <summarizedField>ASI_CRM_Pros_Volume_Potential__c.ASI_CRM_SG_Weight__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Pros_Volume_Potential__c.ASI_CRM_SG_Pros_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential_Id__c</fullName>
        <formula>CASESAFEID(ASI_CRM_SG_Volume_Potential_Threshold__r.ASI_CRM_SG_Volume_Potential_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Threshold</label>
        <referenceTo>ASI_CRM_Volume_Potential_Threshold__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>ASI_CRM_Volume_Potential__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Spirit_Champagne_Volume_Level__c</fullName>
        <formula>ASI_CRM_SG_Volume_Potential_Threshold__r.ASI_CRM_SG_Volume_Potential_Name__c</formula>
        <label>Spirit &amp; Champagne Volume Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Spirit_Champagne_Volume__c</fullName>
        <label>Spirit &amp; Champagne Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Image_Level_Score__c</fullName>
        <label>Total Image Level Score</label>
        <summarizedField>ASI_CRM_Pros_Image_Level__c.ASI_CRM_Score__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Pros_Image_Level__c.ASI_CRM_SG_Pros_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Frequency_Thresholds__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Frequency Thresholds</label>
        <referenceTo>ASI_CRM_Visit_Frequency_Thresholds__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Potential_Name__c</fullName>
        <formula>ASI_CRM_SG_DAMD_Threshold__r.ASI_CRM_SG_Volume_Potential_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Volume_Level__c</fullName>
        <formula>ASI_CRM_Wine_Volume_Potential_Threshold__r.ASI_CRM_SG_Volume_Potential_Name__c</formula>
        <label>Wine Volume Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Volume_Potential_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine Volume Potential Threshold</label>
        <referenceTo>ASI_CRM_Volume_Potential_Threshold__c</referenceTo>
        <relationshipLabel>Pros Segmentations (Wine Volume Potential Threshold)</relationshipLabel>
        <relationshipName>Pros_Segmentations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Volume__c</fullName>
        <label>Wine Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted_Brand__c</fullName>
        <label>Contracted Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>MHD</fullName>
                </value>
                <value>
                    <fullName>Other brands</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Pros Segmentations</relationshipLabel>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pros Segmentation</label>
    <listViews>
        <fullName>ASI_CRM_TW_PROS_Segmentations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Account__c</columns>
        <columns>ASI_CRM_SG_Customer__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Total_Image_Level_Weight__c</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Segmentation__c.ASI_CRM_TW_Pros_Segmentation</value>
        </filters>
        <label>TW PROS Segmentations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Pros_Segmentations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <columns>ASI_CRM_Spirit_Champagne_Volume__c</columns>
        <columns>ASI_CRM_Spirit_Champagne_Volume_Level__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Threshold__c</columns>
        <columns>ASI_CRM_Wine_Volume__c</columns>
        <columns>ASI_CRM_Wine_Volume_Level__c</columns>
        <columns>ASI_CRM_Wine_Volume_Potential_Threshold__c</columns>
        <columns>ASI_CRM_SG_DAMD_Threshold__c</columns>
        <columns>ASI_CRM_DAMD_Action__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Segmentation__c.ASI_CRM_VN_PROS_Segmentation</value>
        </filters>
        <label>VN Pros Segmentations</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Customer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Id__c</columns>
        <columns>ASI_CRM_SG_Service_Pack__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_TH_PROS</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Customer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Id__c</columns>
        <columns>ASI_CRM_SG_Service_Pack__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Segmentation__c.ASI_CRM_TH_Pros_Segmentation</value>
        </filters>
        <label>All TH PROS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SG</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_CRM_SG_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Threshold__c</columns>
        <columns>ASI_CRM_SG_Service_Pack__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Segmentation__c.ASI_CRM_SG_PROS_Segmentation</value>
        </filters>
        <label>SG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Check</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Customer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Id__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Threshold__c</columns>
        <columns>ASI_CRM_SG_DAMD_Threshold__c</columns>
        <columns>ASI_CRM_SG_Service_Pack__c</columns>
        <columns>ASI_CRM_SG_Image_Level_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Segmentation__c.ASI_CRM_SG_PROS_Segmentation</value>
        </filters>
        <filters>
            <field>ASI_CRM_SG_Customer__c</field>
            <operation>contains</operation>
            <value>PROS Health</value>
        </filters>
        <filters>
            <field>ASI_CRM_SG_Customer__c</field>
            <operation>contains</operation>
            <value>Epic Group Pte Ltd c/o DV8</value>
        </filters>
        <label>SG - Check</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>PROS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pros Segmentations</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_PROS_Segmentation</fullName>
        <active>true</active>
        <label>ASI CRM MY PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_PROS_Segmentation</fullName>
        <active>true</active>
        <label>ASI CRM SG PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Pros_Segmentation</fullName>
        <active>true</active>
        <label>ASI CRM TH Pros Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pros_Segmentation</fullName>
        <active>true</active>
        <label>ASI CRM TW Pros Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_PROS_Segmentation</fullName>
        <active>true</active>
        <label>ASI CRM VN PROS Segmentation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>